// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group should render as active when [active=true] 1`] = `
<ListGroupItem
  active={true}
  allowFocus={false}
  key="foo"
  onClick={[MockFunction]}
>
  <span
    className="text-capitalize"
  >
    foo
  </span>
</ListGroupItem>
`;

exports[`Group should render correct with default props 1`] = `
<ListGroupItem
  active={false}
  allowFocus={false}
  key="foo"
  onClick={[MockFunction]}
>
  <span
    className="text-capitalize"
  >
    foo
  </span>
</ListGroupItem>
`;
